--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap");
 
 * {
   margin: 0;
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  font-family: 'Press Start 2P', sans-serif;
+  font-family: "Press Start 2P", sans-serif;
   color: #eee;
   background-color: #222;
   /* background-color: #60b347; */
@@ -103,15 +103,71 @@ h1 {
   font-family: inherit;
   padding: 2rem 3rem;
   cursor: pointer;
+  transition: all 0.5s;
 }
 
 .btn:hover {
   background-color: #ccc;
 }
 
+.btn:active {
+  transform: translateY(10px);
+}
+
 .message {
+  position: relative;
   margin-bottom: 8rem;
   height: 3rem;
+  animation-name: messageAnim;
+  animation-duration: 0.5s;
+}
+/* adding animation of "message" */
+.messageAnimate {
+  animation-name: messageAnim2;
+  animation-duration: 0.5s;
+}
+.messageAnimateFail {
+  animation-name: messageAnimFail;
+  animation-duration: 0.2s;
+}
+@keyframes messageAnim {
+  0% {
+    top: 0px;
+  }
+  50% {
+    top: 10px;
+  }
+  100% {
+    top: 0px;
+  }
+}
+@keyframes messageAnim2 {
+  0% {
+    top: 0px;
+  }
+  50% {
+    top: 10px;
+  }
+  100% {
+    top: 0px;
+  }
+}
+@keyframes messageAnimFail {
+  0% {
+    left: 0px;
+  }
+  25% {
+    left: -20px;
+  }
+  50% {
+    left: 0px;
+  }
+  75% {
+    left: -20px;
+  }
+  100% {
+    left: 0px;
+  }
 }
 
 .label-score {
